[metadata]
name = horizon-customization
summary = OpenStack Horizon panel customization module.
description-file = README.md
author = Piri Cloud
author-email = dev@piri.cloud
home-page = https://piri.cloud
python-requires = >=3.6
license = Apache License, Version 2.0
version = 0.0.1
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
install_requires = horizon

[files]
packages = horizon_customization
